@@ -17,19 +17,18 @@
 package io.cloudevents.spring.codec;
 
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import io.cloudevents.CloudEvent;
 import io.cloudevents.core.format.EventFormat;
 import io.cloudevents.core.provider.EventFormatProvider;
 
+import org.jspecify.annotations.Nullable;
 import org.springframework.core.ResolvableType;
 import org.springframework.core.codec.AbstractDataBufferDecoder;
 import org.springframework.core.codec.DecodingException;
 import org.springframework.core.codec.Hints;
 import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.core.io.buffer.DataBufferUtils;
-import org.springframework.lang.Nullable;
 import org.springframework.util.MimeType;
 import org.springframework.util.MimeTypeUtils;
 
@@ -40,11 +39,15 @@ import org.springframework.util.MimeTypeUtils;
  */
 public class CloudEventDecoder extends AbstractDataBufferDecoder<CloudEvent> {
 
-	public CloudEventDecoder() {
-		super(EventFormatProvider.getInstance().getContentTypes().stream()
-				.map(type -> MimeTypeUtils.parseMimeType(type))
-				.collect(Collectors.toList()).toArray(new MimeType[0]));
-	}
+    public CloudEventDecoder() {
+        super(EventFormatProvider
+            .getInstance()
+            .getContentTypes()
+            .stream()
+            .map(MimeTypeUtils::parseMimeType)
+            .toList()
+            .toArray(new MimeType[0]));
+    }
 
 	@Override
 	public boolean canDecode(ResolvableType elementType, @Nullable MimeType mimeType) {
